modified:   09. Methods/Declaration/Parameters.ipynb

--- a/09. Methods/Declaration/Parameters.ipynb
+++ b/09. Methods/Declaration/Parameters.ipynb
@@ -1228,8 +1228,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we demonstrate this concept by declaring a Method which defines both an `out` variable and a `ref` variable:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1243,10 +1273,200 @@
    },
    "outputs": [],
    "source": [
-    "public void DeclareVariablesUsingMethodParameters( out string valueTypeOutput, ref string referenceTypeOutput )\n",
+    "public void DeclareVariablesUsingMethodParameters( out string outputParameter, ref string referenceParameter )\n",
     "{\n",
-    "    valueTypeOutput = \"This variable was declared inside the parameterization of a Method Signature\";\n",
+    "    outputParameter = \"This is a value declared inside the parameterization of a Method Signature\";\n",
+    "    referenceParameter = \"This variable contains a reference declared as a Method parameter\";\n",
     "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Having done so, let's now declare `string` type variables which we will use as arguments to `DeclareVariablesUsingMethodParameters()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public string valueTypeParam = \"This value will be overwritten by the local Method value\",\n",
+    "              referenceTypeParam = \"The local Method reference will overwrite this value\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "DeclareVariablesUsingMethodParameters( out valueTypeParam, ref valueTypeParam );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We now have access to these variables outside the scope of the calling method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,1): error CS0103: The name 'outputParameter' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,1): error CS0103: The name 'outputParameter' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "outputParameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,1): error CS0103: The name 'referenceParameter' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,1): error CS0103: The name 'referenceParameter' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "referenceParameter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "There is a small difference between using `ref` and `out`, and that difference has to do with whether the calling method or the called method is responsible for initializing the variable.   \n",
+    "\n",
+    "With the `ref` keyword, the calling method needs to **initialize the variable before the method call**. This allows the called method to assume that it is already initialized. These are sometimes called **reference parameters**. \n",
+    "   \n",
+    "With the `out` keyword, the compiler ensures that the called method initializes the variable before returning from the method. These are sometimes called **output parameters**."
    ]
   }
  ],
@@ -1263,13 +1483,6 @@
      {
       "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
