modified:   09. Methods/Declaration/Parameters.ipynb

--- a/09. Methods/Declaration/Parameters.ipynb
+++ b/09. Methods/Declaration/Parameters.ipynb
@@ -1326,8 +1326,8 @@
    },
    "outputs": [],
    "source": [
-    "public string valueTypeParam = \"This value will be overwritten by the local Method value\",\n",
-    "              referenceTypeParam = \"The local Method reference will overwrite this value\";"
+    "public string outputParameter = \"This value will be overwritten by the local Method value\",\n",
+    "              referenceParameter = \"The local Method reference will overwrite this value\";"
    ]
   },
   {
@@ -1346,7 +1346,7 @@
    },
    "outputs": [],
    "source": [
-    "DeclareVariablesUsingMethodParameters( out valueTypeParam, ref valueTypeParam );"
+    "DeclareVariablesUsingMethodParameters( out outputParameter, ref referenceParameter );"
    ]
   },
   {
@@ -1395,12 +1395,13 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(1,1): error CS0103: The name 'outputParameter' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,1): error CS0103: The name 'outputParameter' does not exist in the current context"
-     ]
+     "data": {
+      "text/plain": [
+       "This is a value declared inside the parameterization of a Method Signature"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1423,12 +1424,13 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(1,1): error CS0103: The name 'referenceParameter' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,1): error CS0103: The name 'referenceParameter' does not exist in the current context"
-     ]
+     "data": {
+      "text/plain": [
+       "This variable contains a reference declared as a Method parameter"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
