modified:   09. Methods/Declaration/Parameters.ipynb

--- a/09. Methods/Declaration/Parameters.ipynb
+++ b/09. Methods/Declaration/Parameters.ipynb
@@ -1362,7 +1362,7 @@
     }
    },
    "source": [
-    "We now have access to these variables outside the scope of the calling method:"
+    "We now have access to these variables outside the scope of the calling Method, but observe that their values have respectively been overwritten by those defined locally within the Method body:"
    ]
   },
   {
