modified:   09. Methods/Declaration/Parameters.ipynb renamed:    09. Methods/Implementation/Returning a Result.ipynb -> 09. Methods/Implementation/Returning One or More Results.ipynb

--- a/09. Methods/Declaration/Parameters.ipynb
+++ b/09. Methods/Declaration/Parameters.ipynb
@@ -1456,6 +1456,160 @@
     "   \n",
     "With the `out` keyword, the compiler ensures that the called method initializes the variable before returning from the method. These are sometimes called **output parameters**."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Passing a `ValueType` as a Parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may optionally provide a Method with a `ValueType` parameter, as demonstrated below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public void PrintValueTupleMembers( (string Id, string FirstName, string LastName) secretAgent )\n",
+    "{\n",
+    "    Console.WriteLine( \n",
+    "        $\"Pierce Brosnan is: {secretAgent.FirstName} {secretAgent.LastName}, {secretAgent.Id}\" \n",
+    "    );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may then invoke the method by passing in a `ValueTuple` containing the appropriate members as \"multiple\" arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pierce Brosnan is: James Bond, 007\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "PrintValueTupleMembers( (\"007\", \"James\", \"Bond\") );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "For more on `ValueTuple` structs, see [Methods / Implementation / Returning One or More Results](../Implementation/Returning%20One%20or%20More%20Results.ipynb)"
+   ]
   }
  ],
  "metadata": {
