modified:   09. Methods/Working with Delegates.ipynb

--- a/09. Methods/Working with Delegates.ipynb
+++ b/09. Methods/Working with Delegates.ipynb
@@ -48,11 +48,9 @@
     "\n",
     "$C\\#$ has this feature, and it is called a **delegate**.   \n",
     "\n",
-    "In $C\\#$, **delegates** are similar to pointers to functions, in C or C++.   \n",
-    "A **delegate** is a **reference type variable that holds the reference to a method**.     \n",
-    "The reference can be changed at runtime.\n",
+    "In $C\\#$, **delegates** are similar to pointers to functions, in C or C++. A **delegate** is a **reference type variable that holds the reference to a method**. The reference can be changed at runtime.\n",
     "\n",
-    "**Delegates** are especially used for implementing **events** and the **call-back methods**. All **delegates** are implicitly derived from the `System.Delegate` class."
+    "**Delegates** are especially used for implementing **events** and the **call-back methods**. All **delegates** are implicitly derived from the [`System.Delegate` class](https://learn.microsoft.com/en-us/dotnet/api/system.delegate?view=net-7.0)."
    ]
   },
   {
@@ -115,21 +113,6 @@
     "```c#\n",
     "[access_modifiers] delegate delegateType DelegateName( [ parameters_list ] )\n",
     "```"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
    ]
   },
   {
@@ -1053,7 +1036,7 @@
     }
    },
    "source": [
-    "Let's now instantiate our new `UntypedAritmeticOperation` delegate, initialize it with the `Add()` method, and then sequentially chain each of the remaining arithmetic operation methods into it:"
+    "Let's now instantiate our new `UntypedArithmeticOperation` delegate, initialize it with the `Add()` method, and then sequentially chain each of the remaining arithmetic operation methods into it:"
    ]
   },
   {
@@ -1072,7 +1055,7 @@
    },
    "outputs": [],
    "source": [
-    "UntypedAritmeticOperation printArithmetic = Add;"
+    "UntypedArithmeticOperation printArithmetic = Add;"
    ]
   },
   {
@@ -1154,6 +1137,495 @@
    ],
    "source": [
     "printArithmetic( 4, 4 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The `Action<T>` and `Func<in T, out T>` Delegates"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "While we can certainly make your own delegate types whenever we need to, in practice, this is rare (and probably unnecessary for most cases). \n",
+    "   \n",
+    "That's because, included with the $.NET\\,Platform$ is a collection of delegates that are already defined for you. These delegates are generic, so they are very flexible, and cover most situations. \n",
+    "\n",
+    "These are the [Action](https://www.tutorialsteacher.com/csharp/csharp-action-delegate) and [Func](https://www.tutorialsteacher.com/csharp/csharp-func-delegate) delegates. \n",
+    "\n",
+    "The `Action<T>` delegates all have a `void` return type, while the `Func<in T, out T>` delegates have a generic return type."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `Action<T>`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The following is a generalized form of the `Action<T>` delegate:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "Action < T1, ..., T16 > delegateName = MethodNameWithoutParenthesis;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that it is possible to provide up to 16 input parameters of varying types."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To exemplify this useful construct, rather than having implemented the `UntypedAritmeticOperation` delegate, as we did previously, we could have done the exact same thing using the `Action<T>` delegate instead, as demonstrated below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Action<int,int> printArithmetic = Add;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "printArithmetic += Subtract;\n",
+    "printArithmetic += Multiply;\n",
+    "printArithmetic += Divide;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "0\n",
+      "16\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "printArithmetic( 4, 4 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Note that, rather than having used our pre-existing arithmetic operational methods, we could have alternatively assigned our `Action<T>` **Anonymous Methods** using either `delgate` keywords, or **Lamba Expressions**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `Func<in T, out T>`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The following is a generalized form of the `Func<in T, out T>` delegate:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "Action < T1, ..., T16, out T> delegateName = MethodNameWithoutParenthesis;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that, much like with `Action<T>,` it is possible to provide up to 16 input parameters of varying types, however it is **required to additionally provide a final output parameter specifyung the return type**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Similarly, we can also simplify our original, typed `doArithmetic` implementation using the `Func<in T, out T>` delegate by assigning to it one of the operational methods we've previously defined. \n",
+    "   \n",
+    "However, since we have effectively overwritten those methods in favor of redefining them to return `void`, as previously explained, rather than re-redifing them, we may alternatively assign `Func<in T, out T>` with an **Anonymous Method**, either using the `delegate` keyword, or by using a **Lamba Expression**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Use the delegate keyword to assign an anonymous Multipication method\n",
+    "// to the doArithmetic variable\n",
+    "Func<int, int, int> doArithmetic = delegate( int a, int b )\n",
+    "{\n",
+    "    return a * b;\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>16</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// 4 * 4 = 16\n",
+    "doArithmetic( 4, 4 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Use a Lamba Expression to assign an anonymous Division method\n",
+    "// to the doArithmetic variable\n",
+    "Func<int, int, int> doArithmetic = ( int a, int b ) => { return a / b; };"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>1</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// 4 / 4 = 1\n",
+    "doArithmetic( 4, 4 )"
    ]
   }
  ],
